application/public/css/mainpage.css
html,
body {
  height: relative;
  width: auto;
  background-color: lightgray;
}

.aboutbody {
  background-color: white;
}

.header {
  height: 100px;
  background-color: indigo !important;
}

.navbar-brand {
  font-size: 30px;
  padding: 0;
  padding-left: 10px;
 
}
.nav-link {
  padding-left: 40px !important;
}
.navbar-nav a {
  font-size: large;
  font-family: 'Arial Black', Gadget, sans-serif;
  padding-top: 0;
  padding-left: 40px;
}

.navbar {
  background-color: indigo !important;
  color: white !important;
  padding-left: 40px;
}

/* dropdown */
select {
  width: auto;
  font-size: 20px;
  border: 1px solid #ccc;
  height: 38px;
  background: #ffc107;
  border-end-end-radius: 0px;
}

.searchDiv {
  background-color: indigo;
  display: flex;
  justify-content: center;
  align-content: center;
  padding-bottom: 10px;
  padding-top: 0;
  padding-left: 40px;
}

.hero {
  background-size: 100% 100%;
  object-fit: contain;
  height: 300px;
  background-color: indigo;
  opacity: 0.4;
  display: flex;
  justify-content: center;
  align-content: center;
}

.innerHero {
  background-color: white;
  opacity: 1 !important;
  z-index: 1;
}

#inner-intro {
  background-color: indigo;
  color: #fff;
  min-height: 180px;
}

#team-members {
  margin-top: 80px;
  margin-bottom: 80px;
  height: 100%;
  overflow: auto;
  background-color: white;
}

#team-members .card {
  margin: 2px;
}

.face-img {
  height: 120px;
  width: 120px;
}

.side {
  background-color: white;
  display: flex;
  margin-left: 23px;
}

.main {
  display: flex;
  justify-content: center;
}

.pic {
  width: 100%;
  height: 250px;
  
}

.dynamicCard {
  background: transparent;
  /* border: transparent; */
  margin-bottom: 20px;
}

#cardss {
  background: white;
  padding-left: 40px;
  padding-right: 40px;
  padding-top: 30px;
  height: 100%;
}
hr {
  margin-top: 2rem !important;
  margin-bottom: 0;
}
.mainCardBody {
  padding-top: 0;
}

ul {
  list-style-type: none;
  margin: 0;
  padding-left: 0;
}

span {
  display: flex;
  width: 300px;
  padding-left: 40px;
  padding-bottom: 10px;
  margin: 0;
  align-content: flex-end;
  align-items: space-between;
}

.mainArea {
  min-height: 100vh;
}

